Some CSS and SCSS refacto

--- a/app/views/snippets/blogs.liquid
+++ b/app/views/snippets/blogs.liquid
@@ -16,7 +16,7 @@
   </div>
 
   <div class="row">
-    <div class="span4 blogs-bloc suitcase-bloc">
+    <div class="span4 info-bloc suitcase-bloc">
       <div class="padding20">
         <span class="bloc-title">
           {% editable_short_text "biz_blog_title", hint: "Biz Blog Title", priority: 59 %}
@@ -25,10 +25,10 @@
         </span>
 
         <!-- This content is supposed to be loaded from a collection in the end -->
-        <span class="bloc-section-title list-suitcase">Title of the post</span>
+        <span class="bloc-section-title suitcase">Title of the post</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
 
-        <span class="bloc-section-title list-suitcase">Title of the post</span>
+        <span class="bloc-section-title suitcase">Title of the post</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
 
         <span class="read-more">
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-    <div class="span4 blogs-bloc tv-bloc">
+    <div class="span4 info-bloc tv-bloc">
       <div class="padding20">
         <span class="bloc-title">
           {% editable_short_text "geek_blog_title", hint: "Geek Blog Title", priority: 56 %}
@@ -49,10 +49,10 @@
         </span>
 
         <!-- This content is supposed to be loaded from a collection in the end -->
-        <span class="bloc-section-title list-tv">Title of the post</span>
+        <span class="bloc-section-title tv">Title of the post</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
 
-        <span class="bloc-section-title list-tv">Title of the post</span>
+        <span class="bloc-section-title tv">Title of the post</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
 
         <span class="read-more">
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-    <div class="span4 blogs-bloc social-networks-bloc">
+    <div class="span4 info-bloc social-networks-bloc">
       <div class="padding20">
         <span class="bloc-title">
           {% editable_short_text "follow_us_title", hint: "Follow Us Title", priority: 53 %}
@@ -74,9 +74,9 @@
 
         <!-- This content is supposed to be loaded from a collection in the end -->
         {% editable_long_text "social_networks_info", hint: "Social Networks Info", priority: 52 %}
-          <span class="card-info twitter">@applidget</span><br />
-          <span class="card-info facebook">/applidget</span><br />
-          <span class="card-info linkedin">/applidget.in</span>
+          <span class="list-info twitter">@applidget</span><br />
+          <span class="list-info facebook">/applidget</span><br />
+          <span class="list-info linkedin">/applidget.in</span>
         {% endeditable_long_text %}
         <!-- End content -->
       </div>
