--- a/app/views/snippets/event_solutions.liquid
+++ b/app/views/snippets/event_solutions.liquid
@@ -22,10 +22,10 @@
           <span class="icon-write"></span>
         </h3>
         {% editable_long_text "business_card_info", hint: "Business Card Info", priority: 76 %}
-          <span class="card-info email">Email: tristan.verdier@gmail.com</span><br />
-          <span class="card-info phone">Phone: 123 456 789</span><br />
-          <span class="card-info company">Society: Applidget</span><br />
-          <span class="card-info position">Position: Some</span>
+          <span class="list-info email">Email: tristan.verdier@gmail.com</span><br />
+          <span class="list-info phone">Phone: 123 456 789</span><br />
+          <span class="list-info company">Society: Applidget</span><br />
+          <span class="list-info position">Position: Some</span>
         {% endeditable_long_text %}
       </div>
     </div>
