--- a/app/views/snippets/team.liquid
+++ b/app/views/snippets/team.liquid
@@ -16,7 +16,7 @@
   </div>
 
   <div class="row">
-    <div class="span4 team-bloc">
+    <div class="span4 info-bloc">
       <div class="padding20">
         <span class="bloc-title">
           {% editable_short_text "our_team_title", hint: "Our Team Title", priority: 68 %}
@@ -25,16 +25,16 @@
         </span>
 
         <!-- This content is supposed to be loaded from a collection in the end -->
-        <span class="bloc-section-title">Tristan Verdier</span>
+        <span class="bloc-section-title team">Tristan Verdier</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
 
-        <span class="bloc-section-title">John Doe</span>
+        <span class="bloc-section-title team">John Doe</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
         <!-- End content -->
       </div>
     </div>
 
-    <div class="span4 team-bloc">
+    <div class="span4 info-bloc">
       <div class="padding20">
         <span class="bloc-title">
           {% editable_short_text "join_us_title", hint: "Join Us Title", priority: 66 %}
@@ -43,16 +43,16 @@
         </span>
 
         <!-- This content is supposed to be loaded from a collection in the end -->
-        <span class="bloc-section-title">UI/UX Designer</span>
+        <span class="bloc-section-title team">UI/UX Designer</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
 
-        <span class="bloc-section-title">Ruby Developer</span>
+        <span class="bloc-section-title team">Ruby Developer</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
         <!-- End content -->
       </div>
     </div>
 
-    <div class="span4 team-bloc">
+    <div class="span4 info-bloc">
       <div class="padding20">
         <span class="bloc-title">
           {% editable_short_text "last_open_positions_title", hint: "Last Open Positions Title", priority: 64 %}
@@ -61,10 +61,10 @@
         </span>
 
         <!-- This content is supposed to be loaded from a collection in the end -->
-        <span class="bloc-section-title">Some Designer</span>
+        <span class="bloc-section-title team">Some Designer</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
 
-        <span class="bloc-section-title">HTML5 Developer</span>
+        <span class="bloc-section-title team">HTML5 Developer</span>
         <span class="bloc-section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
         <!-- End content -->
       </div>
