--- a/public/stylesheets/_base.scss
+++ b/public/stylesheets/_base.scss
@@ -48,6 +48,17 @@ $image-list: (applidget, blogs, contact, events, team, technologies);  // TODO(s
   }
 }
 
+@mixin after-before-content($content, $display, $position, $background, $top, $right, $bottom, $left){
+  content: $content;
+  display: $display;
+  position: $position;
+  background: $background;
+  top: $top;
+  right: $right;
+  bottom: $bottom;
+  left: $left;
+}
+
 /* Fonts */
 @font-face {
   font-family: 'gothamrnd_book';
