--- a/public/stylesheets/jumbotron.css.scss
+++ b/public/stylesheets/jumbotron.css.scss
@@ -23,6 +23,41 @@
   .container {
     position: relative;
     z-index: 2;
+
+    .info-bloc {
+      min-height: 300px;
+      color: #8d8d8d;
+      text-shadow: none;
+      line-height: 1.8em;
+      background-color: #FFFFFF;
+      @include border-radius(4px);
+      @include box-shadow(inset 0 0 6px #8D8D8D);
+
+      .bloc-title {
+        display: block;
+        font-weight: bold;
+        margin-bottom: 10px;
+      }
+
+      .bloc-section-title {
+        display: block;
+        padding-left: 25px;
+        text-decoration: underline;
+      }
+
+      .bloc-section-description {
+        display: block;
+        margin-bottom: 8px;
+      }
+    }
+
+    .list-info {
+      line-height: 21px;
+      display: inline-block;
+      height: 21px;
+      padding-left: 2em;
+      margin-bottom: 1em;
+    }
   }
 }
 
@@ -46,6 +81,23 @@
       margin-top: 20px;
       margin-bottom: 32px;
     }
+
+    .container {
+      .info-bloc {
+        font-size: 0.9em;
+
+        .bloc-section-title { background-size: 16px 15px; }
+        .bloc-section-description { line-height: 1.5em; }
+      }
+
+      .list-info {
+        font-size: 0.9em;
+        height: auto;
+        line-height: 18px;
+        margin-bottom: 10px;
+        background-size: 17px 17px;
+      }
+    }
   }
 }
 
@@ -58,6 +110,14 @@
       font-size: 2.8em;
       margin-top: 15px;
       margin-bottom: 25px;
+    }
+
+    .container {
+      .info-bloc {
+        font-size: 0.9em;
+        margin-bottom: 10px;
+        min-height: inherit;
+      }
     }
   }
 }
