Title and backgrounds set

--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -145,6 +145,10 @@
       
     {% endblock %}
 
+    <div class="jumbotron" id ="section-footer">
+      {% include 'footer' %}
+    </div>
+
     <!-- Le javascripts -->
     {{'jquery.min' | javascript_tag }}
     {{ 'bootstrap.min.js' | javascript_tag}}
