Contact info added

--- a/app/views/snippets/footer.liquid
+++ b/app/views/snippets/footer.liquid
@@ -11,7 +11,16 @@
 
   <div class="row">
     <div class="span6">
+      <span class="list-info-medium email-medium">E-mail us: info@applidget.com</span><br />
+      <span class="list-info-medium phone-medium">Call us: 555 456</span><br />
+      <span class="list-info-medium location-medium">Fake Street 654, ST, Country</span><br />
+      <br />
+      <span class="list-info-medium heart-medium">Go Social:
 
+        {{ "icon-facebook-big-colored.png" | theme_image_tag }}
+        {{ "icon-twitter-big-colored.png" | theme_image_tag }}
+        {{ "icon-linkedin-big-colored.png" | theme_image_tag }}
+      </span>
     </div>
 
     <div class="span6">
