--- a/app/views/snippets/technologies_description.liquid
+++ b/app/views/snippets/technologies_description.liquid
@@ -8,14 +8,14 @@
           {% endeditable_short_text %}
         </span>
         <span class="section-description">
-          {% editable_short_text "technologies_bloc_1_description", hint: "Technologies Bloc 1 Description", priority: 86 %}
+          {% editable_long_text "technologies_bloc_1_description", hint: "Technologies Bloc 1 Description", priority: 86 %}
             <ul>
               <li>Ruby on Rails</li>
               <li>HTML5</li>
               <li>iOS</li>
               <li>Android</li>
             </ul>
-          {% endeditable_short_text %}
+          {% endeditable_long_text %}
         </span>
       </div>
     </div>
@@ -27,9 +27,9 @@
           {% endeditable_short_text %}
         </span>
         <span class="section-description">
-          {% editable_short_text "technologies_bloc_2_description", hint: "Technologies Bloc 2 Description", priority: 84 %}
+          {% editable_long_text "technologies_bloc_2_description", hint: "Technologies Bloc 2 Description", priority: 84 %}
             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          {% endeditable_short_text %}
+          {% endeditable_long_text %}
         </span>
       </div>
     </div>
@@ -41,9 +41,9 @@
           {% endeditable_short_text %}
         </span>
         <span class="section-description">
-          {% editable_short_text "technologies_bloc_3_description", hint: "Technologies Bloc 3 Description", priority: 82 %}
+          {% editable_long_text "technologies_bloc_3_description", hint: "Technologies Bloc 3 Description", priority: 82 %}
             "Lorem ipsum dolor sit amet, consectetur adipisicing elit."
-          {% endeditable_short_text %}
+          {% endeditable_long_text %}
         </span>
       </div>
     </div>
