Wufoo form theme done

--- a/app/views/snippets/footer.liquid
+++ b/app/views/snippets/footer.liquid
@@ -39,8 +39,8 @@
       </span>
     </div>
 
-    <div class="span6 contact-form">
-      <iframe height="499" allowTransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none"  src="https://applidget.wufoo.com/embed/q7w9k9/"><a href="https://applidget.wufoo.com/forms/q7w9k9/">Fill out our contact form!</a></iframe>
+    <div class="span6" id="contact-form">
+      <iframe height="480" allowTransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none"  src="https://applidget.wufoo.com/embed/q7w9k9/"><a href="https://applidget.wufoo.com/forms/q7w9k9/">Fill out our contact form!</a></iframe>
     </div>
   </div>
 
