--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -21,7 +21,7 @@
     {% inline_editor %}
   </head>
   <body>
-    
+    <div id="top"></div>    
 
     <div class="container">
 
@@ -148,6 +148,12 @@
     <div class="jumbotron" id ="section-footer">
       {% include 'footer' %}
     </div>
+
+    <a href="#top" id ="top-scroll" class="anchor-link">
+      {% editable_short_text "back_to_top_title", hint: "Back to Top", priority: 1 %}
+        Back to top
+      {% endeditable_short_text %}
+    </a>
 
     <!-- Le javascripts -->
     {{ 'jquery.min' | javascript_tag }}
