--- a/app/views/snippets/event_solutions.liquid
+++ b/app/views/snippets/event_solutions.liquid
@@ -13,10 +13,61 @@
   </div>
 
   <div class="row">
+    <div class="span6 info-bloc mobicheckin-bloc img-left">
+      <div class="padding20">
+        {{ "mobicheckin-icon.png" || theme_image_tag }}
+        <span class="bloc-title">
+          {% editable_short_text "mobicheckin_title", hint: "Mobicheckin", priority: 79 %}
+            MobiCheckin
+          {% endeditable_short_text %}
+        </span>
+
+        <span class="bloc-section-description">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur.
+        </span>
+
+        <span class="read-more">
+          {% editable_short_text "read_more_mobicheckin", hint: "Read More", priority: 79 %}
+            <a href="#">Read More</a>
+          {% endeditable_short_text %}
+        </span>
+      </div>
+    </div>
+
+    <div class="span6 info-bloc mobinetwork-bloc img-right">
+      <div class="padding20">
+        {{ "mobinetwork-icon.png" || theme_image_tag }}
+        <span class="bloc-title">
+          {% editable_short_text "mobinetwork_title", hint: "Mobinetwork Title", priority: 78 %}
+            MobiNetwork
+          {% endeditable_short_text %}
+        </span>
+
+        <span class="bloc-section-description">
+          Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur.
+        </span>
+
+        <span class="read-more">
+          {% editable_short_text "read_more_mobinetwork", hint: "Read More", priority: 78 %}
+            <a href="#">Read More</a>
+          {% endeditable_short_text %}
+        </span>
+      </div>
+    </div>
+  </div>
+
+  <div class="row marginTop20">
     <div class="span8">
       <div class="business-card">
         <h3>
-          {% editable_short_text "business_card_name", hint: "Business Card Name", priority: 78 %}
+          {% editable_short_text "business_card_name", hint: "Business Card Name", priority: 77 %}
             Tristan Verdier
           {% endeditable_short_text %}
           <span class="icon-write"></span>
