--- a/public/stylesheets/jumbotron.css.scss
+++ b/public/stylesheets/jumbotron.css.scss
@@ -15,9 +15,9 @@
     margin-bottom: 42px;
     text-align: center;
   }
-  
-  a:hover {
-    color: #fff;
+
+  a, a:hover {
+    color: inherit;
   }
   
   .container {
@@ -30,6 +30,8 @@
       text-shadow: none;
       line-height: 1.8em;
       background-color: #FFFFFF;
+      background-repeat: no-repeat;
+      background-position: 90% 102%;
       @include border-radius(4px);
       @include box-shadow(inset 0 0 6px #8D8D8D);
 
