--- a/app/views/snippets/footer.liquid
+++ b/app/views/snippets/footer.liquid
@@ -31,7 +31,7 @@
         {% editable_short_text "go_social_title", hint: "Go Social", priority: 46 %}
           Go Social:
         {% endeditable_short_text %}
-        <span class="inline-to-block">
+        <span class="inline-to-block medium-img">
           {{ "icon-facebook-big-colored.png" | theme_image_tag }}
           {{ "icon-twitter-big-colored.png" | theme_image_tag }}
           {{ "icon-linkedin-big-colored.png" | theme_image_tag }}
